# alchemind

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html
scripts/: demo.py  train_char_rnn.py  train_solubility.py
src/alchemind/: __init__.py  cli.py  config.py
src/alchemind/api/: app.py  schemas.py
src/alchemind/data/: reference_smiles.txt  solubility_sample.csv
src/alchemind/generation/: __init__.py  base.py  char_rnn.py  genetic.py
src/alchemind/pipeline/: __init__.py  discovery.py
src/alchemind/prediction/: __init__.py  descriptors.py  properties.py  solubility.py
src/alchemind/utils/: __init__.py  chem.py
src/alchemind/validation/: __init__.py  validators.py
src/alchemind/web/: index.html
tests/: test_api.py  test_generation.py  test_pipeline.py  test_prediction.py  test_validation.py
